Fixed custom fields include and image alignment on projects

--- a/web/app/themes/matheiken/assets/sass/components/_posts.scss
+++ b/web/app/themes/matheiken/assets/sass/components/_posts.scss
@@ -65,12 +65,13 @@
 	figure {
 		margin-bottom: $gutter;
 
-		&.half-width {
+		&.float-left,
+		&.float-right {
 			width: calc(50% - .5em);
 			float: left;
 		}
 
-		&.half-width + .half-width:nth-child(2n - 1) {
+		&.float-right {
 			margin-left: 1em;
 		}
 	}
